@@ -1,8 +1,11 @@
 665bd6007b2099beabc3cb9d051e6050 net.rieter.xot.channel.nick.nickelodeon/nickfanart.jpg
+665bd6007b2099beabc3cb9d051e6050 net.rieter.xot.channel.nick.nickjr/nickfanart.jpg
 7b7a6c13892225ab999f766d50c50ecb net.rieter.xot.channel.nick.nickjr/nickjrfanart.jpg
 c6dc3b8f06f5255c4b7f928abcd44017 net.rieter.xot.channel.nick.nickjr/nickjrimage.jpg
 f00147795469ed090504c5b72a7caeb2 net.rieter.xot.channel.nick.nickelodeon/nickelodeonimage.png
 dc472aa091392c9dccf388feb158ccd3 net.rieter.xot.channel.nick.nickelodeon/nickelodeonlarge.png
 acb0ae3d7bdd591c474d1db569e03b4f net.rieter.xot.channel.nick.nickelodeon/nickjrimage.png
 da8c5ace75d177e60474ff6c9631d222 net.rieter.xot.channel.nick.nickelodeon/nickjrlarge.png
+f00147795469ed090504c5b72a7caeb2 net.rieter.xot.channel.nick.nickjr/nickelodeonimage.png
+dc472aa091392c9dccf388feb158ccd3 net.rieter.xot.channel.nick.nickjr/nickelodeonlarge.png
 da8c5ace75d177e60474ff6c9631d222 net.rieter.xot.channel.nick.nickjr/nickjrlarge.png
