@@ -21,17 +21,6 @@
       "sortorder": 22,
       "language": "no",
       "fanart": "nickfanart.jpg"
-    },
-    {
-      "guid": "8D1E5858-F926-11E1-BE1C-90F66188709B",
-      "name": "Nickelodeon (Sverige)",
-      "description": "Sändningar från Nickelodeon.se",
-      "icon": "nickelodeonlarge.png",
-      "category": "Kids",
-      "channelcode": "nickse",
-      "sortorder": 22,
-      "language": "se",
-      "fanart": "nickfanart.jpg"
     }
   ]
 }
