@@ -19,7 +19,19 @@
       "category": "Kids",
       "channelcode": "nickjrintl",
       "sortorder": 22,
-      "fanart": "nickjrfanart.jpg"
+      "fanart": "nickjrfanart.jpg",
+      "language": null
+    },
+    {
+      "guid": "8D1E5858-F926-11E1-BE1C-90F66188709B",
+      "name": "Nickelodeon (Sverige)",
+      "description": "Sändningar från Nickelodeon.se",
+      "icon": "nickelodeonlarge.png",
+      "category": "Kids",
+      "channelcode": "nickse",
+      "sortorder": 22,
+      "language": "se",
+      "fanart": "nickfanart.jpg"
     }
   ]
 }
