@@ -1,7 +1,8 @@
-﻿﻿[B]Changelog[/B]
-* Fixed: Nickelodeon channels (Fixes #911)
+﻿﻿﻿[B]Changelog[/B]
+* Fixed: Nickelodeon Sweden (Fixes #948)
 
 [I]Previous changes[/I]
+* Fixed: Nickelodeon channels (Fixes #911)
 * Added: NickJr NL and International
 * Fixed: Remove NickJR content from the main Nickelodeon channels as that content moved
 * Fixed: Minor site change broke Nick channels again...
